--- a/article/frame/vue/vue传值的几种方式/组件间传值的几种方式.md
+++ b/article/frame/vue/vue传值的几种方式/组件间传值的几种方式.md
@@ -1,9 +1,9 @@
 #组件间传值的几种方法
-##全局传值
-1.使用Vuex进行传值
+##全局传值  
+1.使用Vuex进行传值  
 2.使用eventBus进行传值
 
-##父子组件间的传值
+##父子组件间的传值  
 1.使用Prop和Emit  
 父组件  
 html部分
@@ -42,9 +42,9 @@ export default {
 
 }
 ```
-2.使用$attr和$listener
-3.使用$ref传值
-4.使用$parent和$children
+2.使用\$attr和\$listener
+3.使用\$ref传值
+4.使用\$parent和\$children
 5.使用Provide和Inject
 
 ## 兄弟组件间的传值
