1.As a front-end architect, start messing things up from scratch complete

--- a/article/architecture/以前端架构师的身份，从零开始搞事.md
+++ b/article/architecture/以前端架构师的身份，从零开始搞事.md
@@ -41,7 +41,62 @@
 通过这种二次隔离，导致代码环境可控、干净、稳定。因此，无论在哪个环境，代码的发布都是幂等的，换句话说，是稳定可控可预期的。  
 通过以上流程，前端代码能被保证以高质量高稳定性的状态，运行在服务器端。  
 ###  代码版本控制
- 
+传统前后端分离项目中，前端代码通常由前端自己独立部署，打包完成后，直接部署到指定目录下。但该流程有几个严重的问题：
+1. 缓存问题：为了提高用户访问速度，降低加载资源带来的流量压力，我们通常会对前端静态资源做缓存处理。但缺点在于，当我们需要发布或者回滚版本时，不可避免的会有用户访问到缓存静态文件。  
+2. 版本发布、回滚速度慢：传统方案，每次需要发布、回滚都需要重新打包发布代码。这个流程一方面比较慢，另一方面，不一定能准确打包到具体的某一次提交（不准确）  
+
+自研的前端 pipline 管理。核心有以下几点：
+1. 代码版本管理：对于需要提交到线上服务器的代码，在 gitlab 对其添加 tag，只有添加正确 tag 的代码才会被打包发布到线上。该操作关键在于 css、js 等静态资源文件，以版本号作为文件夹目录，同时多版本并存线上。html 不做 cache，作为入口，引入不同版本。  
+在 nginx 层，html 做无缓存处理，每次加载都加载最新的。其他静态资源做 cache，过期时间 15 天  
+2. 多版本共存：由于静态文件本身资源大小比较小（由于做了公共静态文件抽离，所以其实更小），  
+管控方法是作为入口的 html 文件是唯一的，通过修改 html 里，指向的静态资源文件的版本号，来指定用户当前访问的版本号。   
+用户只会在第一次访问的时候，加载静态资源。其余时间访问的都是本地 cache，可以极大的提高用户访问速度和用户体验，降低服务器网络 IO 压力。  
+html 不做缓存处理，又可以避免在新版本发布后，用户访问到的是旧版本页面，而导致业务处理出现异常。  
+### 私有npm源
+通常访问的是内网，因此，需要考虑以后内外网隔离的问题。因此，搭建私有 npm 源，提前从基础设计层面解决问题。 私有源采用开源技术方案Verdaccio。优势有以下几点：
+1. 轻量：verdaccio基于 Node.js 开发，占用资源少，运行速度快，配置简便，
+2. 配置难度低：可以快速配置用户组、权限、运行端口、存放地址等，足以满足一般场景；  
+3. 保证依赖版本稳定：相对于将依赖放到第三方远程源，放本地更稳定，一方面可以提高下载速度（因为部分第三方依赖连外网不稳定），另一方面，可以确保依赖始终存在（被缓存到本地私有 npm 源）  
+
+将一些自己封装的npm 包发布到自己的 npm 源，提供给不同工程使用，避免重复开发带来的研发浪费，以及开发人员能力不稳定带来的公共依赖不可靠的问题。
+### 公共静态资源cache
+除了业务代码以外，前端还会有一些公共静态资源，例如 Vue 的 js 文件、ElementUI的资源文件、Echarts 资源文件，以及一些图片文件等。  
+对于这些文件，是所有工程所共享的，假如这些文件分散在各个工程里，既没必要，也容易导致不同工程依赖文件不统一。另外，也会重复加载这些文件，浪费网络带宽和静态服务器存储空间，没有意义。  
+设一个公共静态路径，通过在脚手架里进行配置，当需要加载这些资源时，直接去指定 nginx 静态服务器里加载，并做长时间 cache，可以提高访问效率和性能。  
+将做一个专门的静态资源管理服务，用于将静态资源（主要是图片），传到静态资源服务，并进行 CDN 加速，然后前端工程通过直接引入图片 url 来使用这些资源。这样可以减轻自己的服务器的网络带宽消耗。  
+## 工程化设计
+### 定制 webpack 脚手架
+为了低成本高效率的提高代码质量，基于实际情况，定制化开发了一个 webpack 脚手架，解决了以下问题：  
+1. 避免了无限制引入第三方库：无限制引入第三方库，是一种常被忽略，但却很容易带来问题的行为（例如 vue+jquery 等）。因为开发人员通常并不会阅读第三方库的源代码，不能保证其是安全可靠的。而定制脚手架，提供了所有开发中需要的依赖，并严控新依赖的引入，则确保整个工程是安全的。  
+2. 约束开发人员代码规范：开发最常见问题是代码规范混乱，各写各的，导致维护成本高企。而通过引入 eslint，强行规定代码风格，自动对不符合规范的代码报错，解决了这些问题。并且由于 IDE 支持通过应用 eslint 规则，自动格式化代码。也降低了对开发人员的约束成本，降低推行代码规范的难度。  
+3，方便提供给其他开发使用标准的脚手架，并提供技术支持（比如可以统一大前端的技术栈）。  
+### 集成调试控制台
+项目的页面里，有大量的表单内容。为了方便开发测试联调，避免每次都需要手动输入很多表单，因此集成了专门的调试控制台。通过特殊操作打开调试控制台后，页面上会出现一个小浮窗，浮窗上有一些预置按钮，点击可以执行一些预定行为  
+通过集成调试控制台，有以下好处：  
+1. 减少重复性操作的低效率行为：自动填写表单是最常见的一种场景，也可以在需要无限下拉加载时，直接加载指定页码或增加每页加载数量，从而快速获取到某页数据，并且无需修改业务代码；
+2. 更多的调试信息：相对于用户使用来说，开发时，有时候有必要需要在页面上显示更多信息，但若修改原有业务代码，则是不优雅的。因此通过调试控制台开启关闭是否显示这些额外信息。并且由于其是默认关闭的且本地独立的，因此也可以在线上调试的时候使用；
+3.线上调试：未来添加埋点系统后，当用户遇见异常情况而无法复现时，可以教用户打开调试控制台，然后点击按钮推送用户历史操作。之后可以在服务器端分析用户行为，查看问题出现的原因。  
+### 多页主从设计
+以工作台为核心平台，其他页面接入，并且后端是微服务设计。故设计思路为多工程多页面主从管理。具体来说，有以下几点：
+1. 多工程：考虑到未来将以工作台为核心，多系统接入的形式来部署。因此拆分前端工程，以工作台为核心入口，然后 story、开发人员、系统等，拆分为多个中小型前端工程。通过这样的拆分，降低了代码开发、维护难度，也减少不同story 开发之间协作成本；
+2. 多页面：对于一个长期维护的项目来说，必须考虑到长期维护难度。因此，结合之前踩坑、维护历史项目的经验，将前端页面设计为多页面模式。具体来说，各个story根据功能点拆分为不同的页面，页面之间跳转以本地缓存、浏览器参数等进行数据交换。通过这样的隔离，无论后续需求是，加入新页面新功能、重构单个页面，还是在新页面上进行新技术尝试，其成本都非常低；  
+3. 主从管理：介入的工程。其他页面需要在工作台打开的话，需要预先注册后，通过页面 id 来调用打开。这样可以通过集中控制，禁止第三方网页在工作台打开非法页面，提高系统安全性；
+## 团队管理
+### 权限控制
+权限控制，主要是指代码权限控制，目的是确保代码安全，问题可控可避免可追溯。  
+具体措施：
+1. 保证依赖版本稳定：代码属于公司财产，因此基于 gitlab，对代码进行权限隔离，默认关闭所有访问权限，针对每个工程，按实际需要给开发赋予指定权限。可以避免因代码泄露的公司财产损失；
+2. 提交权限：允许开发在自己分支上提交，但涉及到主分支的合并，必须提交 merge，然后在组长进行 code review 后，才能提交到主分支。通过这样的形式，主分支的代码必然是可控的，不会引入严重问题；
+3，发布权限：对于将要发布到 dev、qa、pro 的代码，收敛权限到组长，只允许组长进行发布。好处在于，一方面可以提供一个可靠可控版本的线上代码，另一方面，降低开发人员技能要求。
+### 前后端接口对接管控
+前后端开发联调有一个严重问题，就是后端接口变动时，不会在事前事后通知相应前端开发、测试人员。开发效率非常低，并且会出现各种异常情况。  
+因此，通过梳理开发流程，强制要求后端提供接口文档前置，并且要求有一个可控稳定的接口文档，作为对接标准。  
+但实际情况中，还是会有一些接口文档和实际接口不符的情况发生，导致接口测试被迫重做，需要设法减少此类问题。
+### 人员管理
+1. 实战入职面试题：采用理论题+实际业务题结合的方式，确保入职人员真的懂业务开发，避免人员能力风险。在通过初步面试后，安排做一道代码量少，但有一定难度，考验解决问题能力，同时考察态度的笔试题，如果愿意做且能做出来的，根据目前经验来看，基本都比较可靠；
+2. 导师帮带：在新人进来后，安排一个人带着他，答复常见问题，带着做一个story。与由组长直接管理培训相比，更有利于新成员融入团队中；
+3. 新人适应：新人常见问题是不明确自己的定位。因此，组长负责安排新成员的发展方向，并在新人入职的第一周，先安排其开发日报系统，了解脚手架，再安排其做基于现有页面的优化，帮助其了解不同人负责的 story；
+4. 责任明确：明确团队里每个人的定位，并使其知晓。根据团队成员能力不同，态度不同，安排适合其的任务。
 
 参考：
 [以前端架构师身份，从零开始搞事搞事搞事（1）](https://juejin.cn/post/6952066955868110879)
