--- a/article/architecture/前端部署都在部署什么.md
+++ b/article/architecture/前端部署都在部署什么.md
@@ -181,6 +181,56 @@ module.exports = {
 通过源码做版本管理灵活性较差，无法做到一键 &秒级切换版本，不满足商业化环境多变 & 复杂的需要。  
 如何进行版本管理呢？答案是对构建产物进行深层次加工 & 管理。
 与此同时，版本管理/小流量是前端部署的常见公共业务需求，应该和业务后端服务脱离，这里提出一个新的公共服务，纯用于前端部署相关，此处将之称为 Page Server，用于具体的 index.html 文件管理 & 承接 Nginx 流量或业务后端流量等。  
+版本管理、小流量策略等调整会特别频繁，每次调整不应该都登录服务器，故我们需要一个新的服务 & 界面，用于操作管理版本、调整小流量等信息，并且与上述 Page Server 同步，此处我们将该服务称之为 Page Config Web。  
+Page Server 则可能会有很多个实例，部署在多个集群上，以满足跨国部署、多部门项目部署等要求。所以理想情况下 Page Config Web ****还要承接 PageServer 的创建、管理、配置等工作。所以 PageConfigWeb 与 PageServer 是 1 比 N 关系（或M比N，用于跨国部署等）。
+同时，我们一个前端项目可能有多套前端环境，PageSever 在固定集群算公共设施，这些环境理论上都可以由一个或多个 PageServer 承载。故一个 PageServer 和多个前端环境是 1 比 1 或者 1 比 N 关系。  
+对于 Nginx 来的流量，我们需要一种机制来区分该流量属于哪个环境实例，比如通过 URL 来区分，我们可以称之为 路由。  
+最后，为了保证上述服务的正确性和自动化，构建部署（新增版本）完成后，要同步到上述两个服务，以确保版本管理的正确性。
+本质上来说，相当于有一个公用的中间服务，部署在多个集群上，与构建发布过程深度绑定，用于承接HTML 的流量，并通过 Web 站点设置小流量规则、版本等等，来满足多变的上线需求。  
+PageServer 在承载 HTML 服务时，可做一些其他工作，比如：  
+1. SSR
+2. CDN 降级，用于 CDN 异常时直出 HTML 中将静态资源替换为可用的 CDN 站点。
+3. 404 处理
+4. 兜底页（比如服务出现故障，短时间内无法修复时出兜底）
+5. 模板渲染（如做模板替换，将 query 替换到模板中等）
+6. 特殊时期全局处理，如注入全局样式将页面全局置灰
+
+> PageConfig Web 和 PageServer 中有构建后的所有版本信息，理论上可以缓存每个版本的 HTML文件，并且为了优化性能，PageServer 中可将最新全量版本的 HTML 文件缓存到内存中，最大程度提升响应速度，其余版本存储到 Redis 等缓存中。
+  
+以发布一个正式版本 v.1.0.2502 并且回滚过程为例：
+1. 代码合并，触发自动化构建，构建产物以环境（env）+版本（env） + 版本（env）+版本（version） + name-hash 方式组织，并上传到 CDN。
+2. 构建完成后，构建脚本通知工程师、同步 PageServer、PageConfig Web 服务有新版本 v.1.0.2502 。
+3. 工程师收到通知后，到 PageConfig Web 站点发布新版本 v.1.0.2502 （PRE），并为该版本配置 PRE 环境小流量规则，xx-env = pre。此时，只有设置特定 Header 才能访问该版本。
+4. 若是 Nginx 直接转发，则工程师通过设置 Header 访问 PRE 版本。
+5. 若是通过服务端转发，工程师通过配置中心设置 PRE 白名单，即可让用户访问 PRE 版本。
+6. 在 PRE 版本验收完成后，工程师登录 PageConfig Web 站点，发布正式版本 v.1.0.2502 （不带小流量信息）。此时立即生效。
+7. 生效后线上回归，发现有 bug，攻城狮立马登录 PageConfig Web 站点，将版本回滚为上一版本v.1.0.2501 。此时立即生效。
+
+## 部分问题答案
+Q: 前端代码从 tsx/jsx 到部署上线被用户访问，中间大致会经历哪些过程？  
+A: 经历本地开发、远程构建打包部署、安全检查、上传CDN、Nginx做流量转发、对静态资源做若干加工处理等过程。  
+Q：可能大部分同学都知道强缓存/协商缓存，那前端各种产物（HTML、JS、CSS、IMAGES 等）应该用什么缓存策略？以及为什么？  
+若使用协商缓存，但静态资源却不频繁更新，如何避免协商过程的请求浪费？  
+若使用强缓存，那静态资源如何更新？  
+A：HTML使用协商缓存，静态资源使用强缓存，使用name-hash（非覆盖式发布）解决静态资源更新问题。  
+Q：配套的，前端静态资源应该如何组织？  
+A：搭配 Webpack 的Webpack_HTML-Plugin & 配置 output publicPath等。  
+Q：配套的，自动化构建 & 部署过程如何与 CDN 结合？  
+A：自动化构建打包后，将产物传输到对应环境 URL 的CDN上。  
+Q：如何避免前端上线，影响未刷新页面的用户？  
+A：使用name-hash方式组织静态资源，先上线静态资源，再上线HTML。  
+Q：刚上线的版本发现有阻塞性 bug，如何做到秒级回滚，而非再次部署等 20 分钟甚至更久？  
+A：HTML文件使用非覆盖方式存储在CDN上，搭建前端发布服务，对 HTML 按版本等做缓存加工处理。当需要回滚时，更改发布服务HTMl指向即可。  
+Q: CDN 域名突然挂了，如何实现秒级 CDN 降级修补而非再次全部业务重新部署一次？  
+A1: 将静态资源传输到多个 CDN 上，并开发一个加载Script的SDK集成到HTML中。当发现CDN资源加载失败时，逐步降级CDN域名。  
+A2：在前端发布服务中，增加HTML文本处理环节，如增加CDN域名替换，发生异常时，在发布服务中一键设置即可。  
+Q：如何实现一个预发环境，除了前端资源外都是线上环境，将变量控制前端环境内？  
+A：对静态资源做加工，对HTML入口做小流量。  
+Q：部署环节如何方便配套做 AB 测试等？  
+A：参见前端发布服务  
+Q：如何实现一套前端代码，发布成多套环境产物？  
+A：使用环境变量，将当前环境、CDN、CDN_HOST、Version等注入环境变量中，构建时消费 & 将产物上传不同的CDN即可。  
+
 
 参考：
 [2021 年当我们聊前端部署时，我们在聊什么](https://juejin.cn/post/7017710911443959839)
