1. Format code using configuration specifications

--- a/article/tool/使用这些配置规范并格式化你的代码.md
+++ b/article/tool/使用这些配置规范并格式化你的代码.md
@@ -108,6 +108,182 @@ ESLint 不仅能识别浏览器环境中的语法，其它环境(如 Node)我们
   parser: 'babel-eslint',
 }
 ```
+当访问当前源文件内未定义的变量时，no-undef 规则将发出警告。如果你想在一个源文件里使用全局变量，推荐你在 ESLint 中定义这些全局变量，这样 ESLint 就不会发出警告了。
+``` 
+{
+  globals: {
+    "__DEV__": true,
+    "If": true,
+    "For": true,
+    "POBrowser": true
+  },
+}
+```
+ESLint 支持使用第三方插件。在使用插件之前，你必须使用 npm 安装它。在配置文件里配置插件时，可以使用 plugins 关键字来存放插件名字的列表。插件名称可以省略 eslint-plugin- 前缀。
+``` 
+{
+  	plugins: ['react-hooks', 'jsx-control-statements'],
+}
+```
+ESLint 附带有大量的规则。你可以使用注释或配置文件修改你项目中要使用的规则。要改变一个规则设置，你必须将规则 ID 设置为下列值之一
+``` 
+{
+    rules: {
+        eqeqeq: 'off',
+        curly: 'error',
+        quotes: ['error', 'double']
+    }
+}
+```
+配置定义在插件中的一个规则的时候，你必须使用 插件名/规则ID 的形式。比如：
+``` 
+{
+  plugins: ['react-hooks', 'jsx-control-statements'],
+  rules: {
+    'arrow-parens': 0,
+    'react-hooks/rules-of-hooks': 'error',
+    'react-hooks/exhaustive-deps': 'warn',
+    'jsx-control-statements/jsx-use-if-tag': 0,
+    'react/jsx-no-undef': ['error', { 'allowGlobals': true }],
+    'no-prototype-builtins': 'off',
+  }
+}
+```
+### Vue 特殊配置
+Vetur 为 Vue 项目带来了语法高亮和便捷的操作。但是它本身也会自动开启对 Vue 文件的代码检测。这往往会和我们配置的 ESLint 有冲突。为了避免这一点，需要在 VSCode 的 settings.json 中做一些配置： 
+``` 
+// 不允许它格式化代码
+"vetur.format.enable": false,
+// 不允许它做代码检测
+"vetur.validation.template": false,
+"vetur.validation.script": false,
+"vetur.validation.style": false,
+```
+无需将 vue 添加进 eslint.validate,因为 eslint.probe 默认会检测 vue 类型文件。  
+需要配置 .eslintrc.js 文件，里面用到的插件都需要本地安装  
+``` 
+module.exports = {
+    root: true,
+    // 如果是SSR项目，则需要配置node:true
+    env: {
+        browser: true,
+        node: true,
+    },
+    // 为什么是这样的parser配置？https://eslint.vuejs.org/user-guide/#how-to-use-a-custom-parser
+    parser: 'vue-eslint-parser',
+    parserOptions: {
+        parser: 'babel-eslint',
+    },
+    extends: [
+        // 如果是nuxt.js的脚手架项目，则需要安装对应的插件并做以下配置
+        '@nuxtjs',
+        'plugin:nuxt/recommended',
 
+        // 让eslint可以规范vue文件
+        'plugin:vue/base',
+        // vue3的项目需要使用，如果是vue2项目，使用 plugin:vue/recommended
+        'plugin:vue/vue3-recommended',
+    ],
+    plugins: [
+        // 注意这里不能配置 html 选项，为什么？https://eslint.vuejs.org/user-guide/#why-doesn-t-it-work-on-vue-files
+        'vue',
+    ],
+    // 配置自己的规则，覆盖上面继承的规则
+    rules: {
+        // 配置js的缩进为 2，switch case 语句的 case 也使用2个空格缩进
+        indent: ['error', 2, { SwitchCase: 1 }],
+        // 使用 eslint 检测 template里的代码，这里我配置 2 个空格缩进
+        'vue/html-indent': ['error', 2],
+    },
+};
+```
+### React 特殊配置
+**React Hooks**  
+.eslintrc.js 中
+``` 
+module.exports = {
+  // eslint-plugin 可以简写
+  plugins: ['react-hooks'],
+}
+```
+**针对 JSX**  
+需要安装 eslint-plugin-react,它内置了对 JSX 的代码规范检测。
+``` 
+{
+  extends: ['plugin:react/recommended'],
+}
+```
+如果不想使用内置的规则，我们也可以自定义规则  
+``` 
+{
+  plugins: ['react'],
+  parserOptions: {
+    ecmaFeatures: {
+      jsx: true,
+    },
+  },
+  rules: {
+    'react/jsx-no-undef': ['error', { "allowGlobals": true }],
+  },
+}
+```
+如果是新的转化版本，则需要做一点小小的更改,以便在使用 JSX 的时候，不会要求我们引入 React。
+``` 
+{
+  extends: ['plugin:react/recommended', 'plugin:react/jsx-runtime'],
+}
+```
+## StyleLint
+需要做的是:  
+1. npm i stylelint stylelint-config-standard stylelint-scss。
+2. 安装 Stylelint插件。
+3. 配置 .stylelintrc 文件。
+4. 配置 VSCode 的 setting.json 文件。
+``` 
+// 防止编辑器内置的 [css] [less] [scss] 校验和此扩展 [stylelint] 报告相同的错误
+"css.validate": false,
+"less.validate": false,
+"scss.validate": false,
+
+// 保存时使用 eslint 和 stylelint 进行修复
+"editor.codeActionsOnSave": {
+  "source.fixAll.eslint": true,
+  "source.fixAll.stylelint": true
+},
+// 默认会对很多文件进行检测，这是不必要的，我们只让他检测样式
+"stylelint.validate": [
+		"css",
+		"html",
+		"less",
+		"postcss",
+		"sass",
+		"scss",
+		"source.css.styled",
+		"styled-css",
+	],
+
+```
+## Prettier
+代码格式化工具。  
+想让 prettier 生效，需要我们在 VSCode 里配置：
+``` 
+// 所有文件都使用 prettier 格式化
+"editor.defaultFormatter": "esbenp.prettier-vscode",
+
+// 只对 js 文件使用 prettier
+"[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+ }
+
+// 所有文件都不指定自动格式化方式
+"editor.defaultFormatter": null,
+
+// js文件不指定自动格式化方式
+"[javascript]": {
+    "editor.defaultFormatter": null
+ }
+```
+可以使用 .prettierrc 文件、VSCode 的 setting.json 、.editorConfig 来配置 prettier。  
+推荐不常使用的文件类型，使用 prettier 去格式化。js,json,jsx,html,css,less,vue 等这些文件，使用工程统一的规范去格式化。  
 参考：  
 [使用这些配置规范并格式化你的代码](https://juejin.cn/post/7023529741248364580)
