--- a/article/js/ES2015/掌握正则表达式.md
+++ b/article/js/ES2015/掌握正则表达式.md
@@ -220,8 +220,297 @@ str.match(reg) // [ 'a1b', 'a2b', 'a3b' ]
 5. * // 出现人一次,等价于{0,}  
 ```
 ### 贪婪匹配 VS 惰性匹配
+>正则本身是贪婪的，会尽可能的多匹配符合模式的字符 
+
+``` 
+let regex = /\d{2,5}/g
+let string = '123 1234 12345 123456'
+// 贪婪匹配
+// string.match(regex) // [ 123, 1234, 12345, 12345 ]
+
+// 惰性匹配
+let regex2 = /\d{2,5}?/g
+// string.match(regex) // [ 12, 12, 34, 12, 34, 12, 34, 56  ]
+```
+**多选分支**  
+一个模式可以实现横向和纵向的模糊匹配，而多选分支可以支持多个子模式任选其一，形式是(p1|p2|p3) 
+``` 
+let regex = /good|nice/g
+let string = 'good idea, nice try.'
+```  
+### 案例分析  
+1. 匹配id  
+``` 
+let regex = /id=".*?"/ // 不加?的话 连后面的class都会匹配到
+let string = '<div id="container" class="main"></div>';
+console.log(string.match(regex)[0]);
+// 2
+let regex = /id="[^"]*"/ 
+let string = '<div id="container" class="main"></div>'; 
+console.log(string.match(regex)[0]); 
+```
+2. 匹配16进制的颜色值
+``` 
+// 要求匹配如下颜色
+/*
+#ffbbad
+#Fc01DF
+#FFF
+#ffE
+*/
+let regex = /#([a-fA-F\d]{6}|[a-fA-F\d]{3})/g
+let string = "#ffbbad #Fc01DF #FFF #ffE";
+
+console.log(string.match(regex))
+//  ["#ffbbad", "#Fc01DF", "#FFF", "#ffE"]
+```
+3. 匹配24小时制时间
+``` 
+/*
+    要求匹配
+  23:59
+  02:07
+*/
+// 解析：
+// 第一位：可以是0、1、2
+// 第二位：当第一位位0或者1的时候，可以是0到9、第一位是2的时候，只可以是0到3
+// 第三位：固定是冒号：
+// 第四位：可以是0到5
+// 第五位：0到9
+
+let regex = /^([01]\d|2[0-3]):[0-5]\d$/
+
+console.log(regex.test('23:59')) // true
+console.log(regex.test('02:07'))// true
+
+// 衍生题，可以是非0
+let regex = /^(0?\d|1\d|2[0-3]):(0?|[1-5])\d/
+
+console.log( regex.test("23:59") ) // true
+console.log( regex.test("02:07") ) // true
+console.log( regex.test("7:09") ) // true
+```
+4. 匹配日期
+``` 
+/*
+    要求匹配
+  yyyy-mm-dd格式的日期
+  注意月份、和日的匹配
+*/
+
+let regex = /\d{4}-(0\d|1[0-2])-(0[1-9]|[12]\d|3[01])/
+
+console.log( regex.test("2017-06-10") ) // true
+console.log( regex.test("2017-11-10") ) // true
+```
+## 括号的神奇作用
+> 括号的作用是提供了分组(括号内的正则是一个整体，即提供子表达式)，便于我们引用它
+
+### 分组
+``` 
+let reg = /(ab)+/g
+let string = 'ababa abbb ababab'
+
+console.log(string.match(reg)) // ["abab", "ab", "ababab"]
+```
+### 分支结构
+``` 
+/*
+匹配 
+I love JavaScript
+I love Regular Expression
+*/
+
+let reg = /I love (JavaScript|Regular Expression)/
+
+console.log(reg.test('I love JavaScript')) // true
+console.log(reg.test('I love Regular Expression')) // true
+```
+### 分组引用
+通过括号创建子表达式，可以进行数据提取和强大的替换操作，也可以通过js来引用分组内容  
+**提取数据**  
+``` 
+/*
+提取年月日
+2021-08-14
+*/
+
+let reg = /(\d{4})-(\d{2})-(\d{2})/
+
+console.log('2021-08-14'.match(reg))
+//  ["2021-08-14", "2021", "08", "14", index: 0, input: "2021-08-14", groups: undefined]
+
+// 第二种解法,通过全局的$1...$9读取 引用的括号数据
+let reg = /(\d{4})-(\d{2})-(\d{2})/
+let string = '2021-08-14'
+
+reg.test(string)
+
+console.log(RegExp.$1) // 2021
+console.log(RegExp.$2) // 08
+console.log(RegExp.$3) // 14
+```
+### 数据替换
+``` 
+/*
+将以下格式替换为mm/dd/yyy
+2021-08-14
+*/
+// 第一种解法
+let reg = /(\d{4})-(\d{2})-(\d{2})/
+let string = '2021-08-14'
+// 第一种写法
+let result1 = string.replace(reg, '$2/$3/$1')
+console.log(result1) // 08/14/2021
+// 第二种写法
+let result2 = string.replace(reg, () => {
+    return RegExp.$2 + '/' + RegExp.$3 + '/' + RegExp.$1
+})
+console.log(result2) // 08/14/2021
+// 第三种写法
+let result3 = string.replace(reg, ($0, $1, $2, $3) => {
+    return $2 + '/' + $3 + '/' + $1
+})
+console.log(result3) // 08/14/2021
+```
+### 反向引用
+js引用分组的内容，也可以通过正则来引用分组内容
+``` 
+/*
+    写一个正则支持以下三种格式
+  2016-06-12
+  2016/06/12
+  2016.06-12
+*/
+let regex = /(\d{4})([-/.])\d{2}\2\d{2}/
+
+var string1 = "2017-06-12";
+var string2 = "2017/06/12";
+var string3 = "2017.06.12";
+var string4 = "2016-06/12";
+
+console.log( regex.test(string1) ); // true
+console.log( regex.test(string2) ); // true
+console.log( regex.test(string3) ); // true
+console.log( regex.test(string4) ); // false
+```
+**注意**  
+引用不存在的分组会匹配的就是\1 \2本身  
+分组后面有量词会最终(注意是分组，不是说整体)捕获的数据是最后一次的匹配  
+``` 
+'12345'.match(/(\d)+/) // ["12345", "5", index: 0, input: "12345", groups: undefined]
+
+/(\d)+ \1/.test('12345 1') // false
+/(\d)+ \1/.test('12345 5') // true
+```
+### 非捕获性括号
+如果想要括号最原始的功能，但不会引用它，也就是既不会出现在API引用里，也不会出现在正则引用里，可以使用非捕获性括号（?:p）
+``` 
+// 非捕获型引用
+let reg = /(?:ab)+/g
+console.log('ababa abbb ababab'.match(reg)) // ["abab", "ab", "ababab"]
+// 注意这里，因为是非捕获型分组，所以使用match方法时，不会出现在数组的1位置了
+let reg = /(?:ab)+/
+console.log('ababa abbb ababab'.match(reg)) // ["abab", index: 0, input: "ababa abbb ababab", groups: undefined]
+let reg = /(ab)+/
+console.log('ababa abbb ababab'.match(reg)) // ["abab", "ab", index: 0, input: "ababa abbb ababab", groups: undefined]
+```
+### 案例
+1. trim方法模拟  
+``` 
+// 1. 提取中间关键字符, 使用的分组引用
+const trim1 = (str) => {
+  return str.replace(/^\s*(.*?)\s*$/, '$1')
+}
+// 2. 去掉开头和结尾的空字符
+const trim2 = (str) => {
+    return str.replace(/^\s*|\s*$/g, '')
+}
+```
+2. 将每个单词的首字母大写
+``` 
+// my name is epeli
+
+const titleize = (str) => {
+  return str.toLowerCase().replace(/(?:^|\s)\w/g, (c) => c.toUpperCase())
+}  
+
+console.log(titleize('my name is epeli')) // My Name Is Epeli
+
+// 拓展，横向转驼峰，例如base-act-tab => BaseActTab
+'base-act-tab'.replace(/(?:^|-)(\w)/g, ($0, $1) => $1.toUpperCase()) // BaseActTab
+```
+3. 驼峰化
+``` 
+// -moz-transform => MozTransform
+const camelize = (str) => {
+    return str.replace(/[-_\s]+(\w)/g, (_, $1) => $1.toUpperCase())     
+}
+
+console.log(camelize('-moz-transform')) // MozTransform
+```
+4. 中划线化
+``` 
+// MozTransform => -moz-transform
+const dasherize = (str) => {
+    return str.replace(/[A-Z]/g, ($0) => ('-' + $0).toLowerCase())
+}
+
+console.log(dasherize('MozTransform')) // -moz-transform
+```
+5. HTML转义和反转义
+``` 
+// html转义规则见https://blog.wpjam.com/m/character-entity/
+
+const escapeHTML = (str) => {
+    const escapeChars = {
+    '<': 'lt',
+    '>': 'gt',
+    '"': 'quot',
+    ''': '#39',
+    '&': 'amp'
+  }
+  
+  let regexp = new RegExp(`[${Object.keys(escapeChars).join('')}]`, 'g') // 为了得到字符组[<>"'&]
+    
+    return str.replace(regexp, (c) => `&${escapeChars[ c ]};`)
+}
+
+console.log( escapeHTML('<div>Blah blah blah</div>')) // &lt;div&gt;Blah blah blah&lt;/div&gt;
 
 
+// 反转义
+const unescapseHTML = (str) => {
+    const htmlEntities = {
+    nbsp: ' ',
+    lt: '<',
+    gt: '>',
+    quot: '"',
+    amp: '&',
+    apos: '''
+  }
+  
+  return str.replace(/&([^;]+);/g, ($0, $1) => {
+        return htmlEntities[ $1 ] || ''
+    })
+}
+
+console.log(unescapseHTML('&lt;div&gt;Blah blah blah&lt;/div&gt;')) // <div>Blah blah blah</div>
+```
+6. 匹配成对的标签
+``` 
+/*
+    匹配
+      <title>regular expression</title>
+        <p>laoyao bye bye</p>
+  不匹配
+    <title>wrong!</p>
+*/
+let reg = /<([^>]+)>.*?</\1>/g
+
+console.log(reg.test('<title>regular expression</title>')) // true
+console.log(reg.test('<p>laoyao bye bye</div>')) // false
+```
 
 参考：  
 [就因为这三个知识点，我彻底学废了”正则表达式“](https://juejin.cn/post/7021672733213720613)
