1.Prototype and Prototype Chain

--- a/article/js/ES2015/原型和原型链.md
+++ b/article/js/ES2015/原型和原型链.md
@@ -1,8 +1,70 @@
 # 原型和原型链
-## prototype
-每个函数都有一个prototype属性，这个protytype指向一个构造函数创建的实例原型
+## 原型链的概念
+js引擎会给这个函数加上一个prototype属性，prototype属性就指向了该构造函数的原型对象。当我们通过new运算符生成构造函数的实例对象后，该实例对象会有一个__proto__属性用来指向生成该实例对象的构造函数的原型对象。原型对象也是一个对象，它内部也有一个__proto__属性，指向构造该对象的构造函数的原型对象，以此类推......直至原型链的顶端Object.prototype.其实，原型链就是用__proto__属性链接起来的原型对象的链接关系。当我们访问一个对象的属性或方法时，我们会优先在该对象内部寻找，如若没有，会去该对象的原型对象上寻找，还没有，我们就逐层往上级的原型对象上查找，若有，就直接返回，否则一直寻找直至顶级。
+## 创建对象的几种方式
+- 字面量的方式：  
+这种方式本质上就是生成Object()构造函数的实例对象，原型对象就是Object构造函数的原型对象
+``` 
+var obj = {
+      name:"author"
+  }
+//这种方式生成的结果和 new Object({name:"author"}) 一模一样
 ```
-function Person() {}
-let person = new Person();
-let person1 = new Person();
+- 通过构造函数new创建
+通过自定义构造函数new 生成的实例对象，原型对象指向自定义的构造函数的原型对象
+``` 
+ function Buffer(){}
+ var buffer = new Buffer()
 ```
+- Object.create()的方式创建  
+object.create创建对象的方式，是根据参数传入的对象生成一个对象，该对象的原型对象就是传入的参数对象
+``` 
+ var _prototype = {
+        name:"author"
+    }
+ var obj = Object.create(_prototype)
+```
+## new 运算符和 instanceof 运算符的原理
+通过new运算符根据一个构造函数生成一个实例对象的时候，我们用实例对象 instanceof 构造函数，就会返回true
+- new
+``` 
+ function _new(fn){
+     if(typeof fn === 'function'){
+        var newObj = Object.create(fn.prototype);
+        var res =  fn.call(newObj);
+        if(typeof res !== 'object' && typeof res !== 'function'){
+            return newObj
+        }else{
+            return res
+        }
+     }else{
+         throw new Error('the arguments must be function')
+     }
+ }
+```
+- instanceof
+``` 
+ function Buffer(){
+
+ }
+ var buffer  = new Buffer(); 
+ console.log(buffer instanceof Buffer) // true
+ console.log(buffer instanceof Object) // true
+```
+instanceof内部是根据实例对象的__proto__指向是否和构造函数的prototype指向一致，buffer是通过Buffer构造函数实例化出来的，所以buffer instanceof Buffer结果为true可以理解，但是buffer instanceof Object的结果也为true,instanceof是可以判断整个原型链上的原型对象是否和构造函数的原型对象相等的
+``` 
+function _insatnceof(obj,fn){
+    var obj_proto = obj.__proto__;
+    var target_proto = fn.prototype;
+    while(obj_proto){
+        if(obj_proto === target_proto){
+            return true
+        }
+        obj_proto = obj_proto.__proto__;
+    }
+    return false
+} 
+```
+
+参考:  
+[还搞不透JS原型链？一篇就够了，面试尽管问，再也不慌啦](https://juejin.cn/post/7028123009613299743)
