1. VSCode event system design

--- a/article/architecture/响应式编程在前端领域的应用.md
+++ b/article/architecture/响应式编程在前端领域的应用.md
@@ -51,5 +51,114 @@ observable.subscribe((x) => console.log(x));
 - Promise 在定义时就会被执行；而 Observable 只有在被订阅时才会执行
 - Promise 不支持取消；而 Observable 可通过取消订阅取消正在进行的工作
 
+### 事件
+响应式编程是面向数据流和变化传播的模式，意味着我们可以对数据流进行配置处理，使其在把事件传给事件处理器之前先进行转换。同样由于流式处理，响应式编程可以把包含一堆异步/事件的组合从开头到结尾用流的操作符清晰表示，而原始事件回调只能表示一堆相邻节点的关系，对于数据流动方向和过程都可以进一步掌握。
+## 响应式编程提供了怎样的服务
+### 热观察与冷观察
+- Hot Observable，可以理解为现场直播，我们进场的时候只能看到即时的内容
+- Cold Observable，可以理解为点播（电影），我们打开的时候会从头播放
+
+```
+let liveStreaming$ = Rx.Observable.interval(1000).take(5);
+
+liveStreaming$.subscribe(
+	data => console.log('subscriber from first second')
+	err => console.log(err),
+	() => console.log('completed')
+)
+
+setTimeout(() => {
+	liveStreaming$.subscribe(
+		data => console.log('subscriber from 2nd second')
+		err => console.log(err),
+		() => console.log('completed')
+	)
+}, 2000)
+// 事实上两个订阅者接收到的值都是 0,1,2,3,4，此处为冷观察
+```
+Rxjs 中 Observable 默认为冷观察，而通过publish()和connect()可以将冷的 Observable 转变成热的：
+``` 
+let publisher$ = Rx.Observable.interval(1000).take(5).publish();
+
+publisher$.subscribe(
+	data => console.log('subscriber from first minute',data),
+	err => console.log(err),
+	() => console.log('completed')
+)
+
+setTimeout(() => {
+    publisher$.subscribe(
+        data => console.log('subscriber from 2nd minute', data),
+        err => console.log(err),
+        () => console.log('completed')
+    )
+}, 3000)
+
+publisher$.connect();
+// 第一个订阅者输出的是0,1,2,3,4，而第二个输出的是3,4，此处为热观察
+```
+热观察和冷观察根据具体的场景可能会有不同的需要，而 Observable 提供的缓存能力也能解决不少业务场景。例如，如果我们想要在拉群后，自动同步之前的聊天记录，通过冷观察就可以做到。  
+### 合流
+流的处理大概是响应式编程中最有意思的部分了。一般来说，合流有两种方式：
+``` 
+# 1. merge
+--1----2-----3--------4---
+----a-----b----c---d------
+           merge
+--1-a--2--b--3-c---d--4---
+
+# 2. combine
+--1----2-----3--------4---
+----a-----b-----c--d------
+         combine
+----1a-2a-2b-3b-3c-3d-4d--
+```
+merge 的合流方式可以用在群聊天、聊天室，一些多人协作的场景、公众号订阅的场景就可以通过这样的方式合流，最终按照顺序地展示出对应的操作记录。  
+函数计算了 A1 和 B2 两个格子的相加。这种情况下，使用 combine 方式合流符合预期，那么我们可以订阅这么一个流：
+``` 
+const streamA1 = Rx.Observable.fromEvent(inputA1, "input"); // 监听 A1 单元格的 input 事件
+const streamB2 = Rx.Observable.fromEvent(inputB2, "input"); // 监听 B2 单元格的 input 事件
+
+const subscribe = combineLatest(streamA1, streamB2).subscribe((valueA1, valueB2) => {
+	// 从 streamA1 和 streamB2 中获取最新发出的值
+    return valueA1 + valaueB2;
+});
+// 获取函数计算结果
+observable.subscribe((x) => console.log(x));
+```
+在一个较大型的前端应用中，通常会拆分成渲染层、数据层、网络层、其他服务等多个功能模块。虽然服务按照功能结构进行拆分了，但依然会存在服务间调用导致依赖关系复杂、事件触发和监听满天飞等情况，这种情况下，只能通过全局搜索关键字来找到上下游数据流、信息流，通过一个接一个的节点和关键字搜索才能大概理清楚某个数据来源哪里。  
+如果使用了响应式编程，可以通过各种合流的方式、订阅分流的方式，来将应用中的数据流动从头到尾串在一起。这样可以很清晰地当前节点上的数据来自于哪里，是用户的操作还是来自网络请求。
+## 其他使用方式
+可以将定时器、数组/可迭代对象变量转换为可观察序列。
+**timer**  
+如果我们界面中有个倒计时，就可以以定时器为数据源，订阅该数据流进行响应：  
+``` 
+// timerOne 在 0 秒时发出第一个值，然后每 1 秒发送一次
+const timerOne = timer(0, 1000).subscribe(x => {
+	// 触发界面更新
+});
+```
+界面中有三个倒计时，我们需要在倒计时全部结束之后展示一些内容，这个时候我们就可以通过将三个倒计时 combine 合流，当三个流都处于倒计时终止的状态时，触发相应的逻辑
+### 数组/可迭代对象
+可以将数组或者可迭代的对象，转换为可观察的序列
+``` 
+var array = [1,2,3,4,5];
+
+// 打印出每个项目
+const subscription = Rx.Observable.from(array).subscribe(
+	x => console.log('onNext: %s', x),
+    e => console.log('onError: %s', e),
+	() => console.log('onCompleted')
+);
+
+// => onNext: 1
+// => onNext: 2
+// => onNext: 3
+// => onNext: 4
+// => onNext: 5
+// => onCompleted
+```
+在离线编辑文档的时候，做了很多操作，这些操作在本地会用一个操作记录数组的方式缓存下来。当应用检测到网络状态恢复的时候，可以将这样的操作组转换为有序的一个个操作同步到远程服务器。
+
 参考:  
 [](https://godbasin.github.io/front-end-playground/front-end-basic/deep-learning/reactive-programing.html)
