1. Tools for web front-end performance analysis

--- a/article/architecture/在线文档的网络层设计思考.md
+++ b/article/architecture/在线文档的网络层设计思考.md
@@ -40,9 +40,9 @@
     - 丢失数据版本补拉
     - 提交数据版本递增
     
-来自数据层的数据，将会添加到任务队列中。任务队列中的数据在提交数据之前，需要检查本地的版本和服务端的版本是否一致，如果有版本缺失的话，则要先从服务端拉取缺失的版本，确认本地版本最新后，则可以提交到服务端。  
-而来自服务端的数据，则需要先和任务队列中的数据进行冲突处理。冲突处理完成之后，则会同步到数据层。  
-这里面其实还有更多的细节，包括队列中任务的状态、任务的合并、数据版本的合并、版本断层的处理、重试失败的处理，队列中任务与协同消息的冲突处理、撤销重做的反向冲突处理，甚至还可能涉及断网离线的操作、本地缓存的任务队列、离线数据与在线数据的同步等等。
+来自数据层的数据，将会添加到任务队列中。任务队列中的数据在提交数据之前，需要检查本地的版本和服务端的版本是否一致，如果有版本缺失的话，则要先从服务端拉取缺失的版本，确认本地版本最新后，则可以提交到服务端。  据层。  
+这里面其实还有更多的细节，包括队列中任务的状态、任务的合并、数据版本的合并、版
+而来自服务端的数据，则需要先和任务队列中的数据进行冲突处理。冲突处理完成之后，则会同步到数本断层的处理、重试失败的处理，队列中任务与协同消息的冲突处理、撤销重做的反向冲突处理，甚至还可能涉及断网离线的操作、本地缓存的任务队列、离线数据与在线数据的同步等等。
  
  参考：  
  [在线文档的网络层设计思考](https://godbasin.github.io/front-end-playground/front-end-basic/deep-learning/online-doc-network.html)
