1. Bind principle, usage scenarios and simulation implementation

--- a/article/frame/组件配置化.md
+++ b/article/frame/组件配置化.md
@@ -1,1 +1,148 @@
 # 组件配置化
+**可配置的页面**  
+一些页面比较简单，里面的板块、功能比较相似，可能文案不一致、模块位置调整了、颜色改变等等。虽然说复制粘贴再改一改，很多时候也能满足要求，但是配置化的思想，就是要把重复性的工作交给机器。  
+这种页面的配置，基本上有两种实现方式：  
+1. 配置后生成静态页面的代码，直接加载生成的页面代码。
+2. 写通用的配置化逻辑，在加载页面的时候拉取配置数据，动态生成页面。
+
+基于 SEO 和实现复杂度各种情况，第一种方式大概是目前比较常用的，第二种的实现难度会稍微大一些，同时对于 SEO 与单页应用有着相同的困境。  
+第一种方式，很多适用于一些移动端的模版页面开发，例如简单的活动页面、商城页面等等。  
+二种的话，更多的是一些管理平台的实现，毕竟大多数都是增删查改，形式无非列表、表单和菜单等
+## 组件配置化
+### 可配置的数据  
+在封装组件的时候，很多数据都是通过作用域内的变量来动态绑定的，例如 Vue 里面则是data、props、computed等维护 scope 内的数据绑定。  
+一个卡片的组件，内容是从外面注入的，可以通过 props 来获取：  
+``` 
+<template>
+  <div>
+    <h2>{{model.question}}</h2>
+    <div>
+      <div v-if="model.withImage"><img :url="model.imageUrl" /></div>
+      <div>{{model.content}}</div>
+    </div>
+    <div>
+      <span @click="likeIt()">点赞</span>
+      <span @click="keepIt()">收藏</span>
+    </div>
+    <div>
+      <p v-for="comment in model.comments">{{comment}}</p>
+    </div>
+  </div>
+</template>
+<script>
+  export default {
+    name: "my-card",
+    props: {
+      // 传入数据
+      model: {
+        type: Object,
+        default: () => {}
+      }
+    },
+    data() {
+      return {
+        isContextShown: false
+      };
+    },
+    methods: {
+      likeIt() {},
+      keepIt() {}
+    },
+    mounted() {}
+  };
+</script>
+```
+使用：
+``` 
+<my-card :model="cardModel"></my-card>
+```
+
+### 可配置的样式
+样式的配置，需要我们考虑 CSS 的设计，通常来说我们有两种方式：
+1. 根据子元素匹配，来描述 CSS。
+2. 根据子 class 匹配，来描述 CSS。
+
+**根据子元素配置 CSS**  
+通过 CSS 匹配规则中的父子元素匹配，来完成样式设计。  
+模块：
+``` 
+<div class="my-dialog">
+  <header>I am header.</header>
+  <section>
+    blablablabla...
+  </section>
+  <footer>
+    <button>Submit</button>
+  </footer>
+</div>
+```
+样式则会这样设计：  
+``` 
+.my-dialog {
+  background: white;
+}
+.my-dialog > header {}
+.my-dialog > section {}
+.my-dialog > footer {}
+```
+通过这种方式设计，或许在写代码的时候会稍微方便些,在 DOM 结构调整过程中很容易踩坑  
+**根据子 class 配置 CSS**  
+对于匹配简单的父子和后代元素关系，使用 class 来辅助匹配，则可以解决 DOM 调整的时候带来的问题。  
+CSS BEM命名  
+``` 
+.block{}
+.block__element{}
+.block--modifier{}
+```
+- block：可以与组件和模块对应的命名，如 card、dialog 等
+- element：元素，如 header、footer 等
+- modifier：修饰符，可视作状态等描述，如 actived、closed 等
+
+上述的代码则会变成：
+``` 
+<div class="my-dialog">
+  <header class="my-dialog__header">I am header.</header>
+  <section class="my-dialog__section">
+    blablablabla...
+  </section>
+  <footer class="my-dialog__footer">
+    <button class="my-dialog__btn--inactived">Submit</button>
+  </footer>
+</div>
+```
+这样在写 HTML 的时候，需要耗费很多的时间来写这些 class 名字，更惨的是，当需要切换某个元素状态的时候，判断条件会变得很长，像：
+``` 
+<button :class="isActived ? 'my-dialog__btn--actived' : 'my-dialog__btn--inactived'">Submit</button>
+```
+可以把修饰符部分脱离，这样使用：
+``` 
+<button class="my-dialog__btn" :class="isActived ? 'actived' : 'inactived'">Submit</button>
+```
+BEM 的优势和弊端也都是很明显的，可以根据具体的团队规模、项目规模、使用场景等，来决定要怎么设计。
+### 可配置的展示
+可配置的展示，更多时候是指某些模块是否展示、展示的样式又是如何等。  
+例如，需要一个对话框，其头部、正文文字、底部按钮等功能都可支持配置：
+``` 
+<div class="my-dialog" :class="{'show': isShown}">
+  <header v-if="model.title">{{model.title}}</header>
+  <section v-if="model.content">{{model.content}}</section>
+  <footer>
+    <button v-for="button in model.buttons">{{button.text}}</button>
+  </footer>
+</div>
+```
+可以通过model.title来控制是否展示头部，可以通过model.buttons来控制底部按钮的数量和文字。  
+### 可配置的功能
+功能的配置，其实很多也与展示的配置相关。但是有些与业务相关的功能，则可以结合展示、功能来定义这样的配置。  
+举个例子，卡片组件可以是视频、图片、文字的卡片：
+- 视频：点击播放
+- 图片：点击新窗口查看
+- 文字：点击无效果
+
+可以两种方式：
+1. 每个功能模块自己控制，同时通过配置控制哪个功能模块的展示。
+2. 模块展示会有些耦合，但在点击事件里，根据配置来进行不同的事件处理，获取不同的效果。
+
+
+参考:  
+[组件配置化](https://godbasin.github.io/front-end-playground/front-end-basic/understanding/component-with-configuration.html#%E5%8F%AF%E9%85%8D%E7%BD%AE%E7%9A%84%E6%95%B0%E6%8D%AE)
