1. Iterator design mode

--- a/article/algorithm/加权轮询算法.md
+++ b/article/algorithm/加权轮询算法.md
@@ -70,5 +70,141 @@ public class WrrRnd implements IWrr {
 }
 ```
 
+## 递增版本
+随机数大多数情况下是美好的，但有时需要非常准确的调度结果，这种情况下使用一个原子递增的计数器，去存放当前的调度次数，是常见的方式。  
+代码与上面类似，在获取hit变量的时候吧随机数的获取方式替换成自增的方式
+``` 
+//原来的
+int hit = random.nextInt(total);
+```
+``` 
+// 处理int的数值被用完的问题
+int hit = count.getAndIncrement() % total;
+```
+## 红黑树版本
+不论是随机数还是按照顺序轮询，它们的时间复杂度都是比较高的，因为它每次都需要遍历所有的配置项，直到达到我们所需要的数值。要想提高其运行效率，我们可以借助于Java的TreeMap，空间上换时间。  
+TreeMap底层是红黑树，实现了根据Key的大小进行排序的功能，它的平均时间复杂度是log(n)。可以通过ceilingEntry方法获取最近的调度单元。  
+在并发上面，直接使用了CAS原语。这时候不再自增，而是将最大值严格控制在total以下，通过自旋来处理冲突。  
+``` 
+public class WrrSecurityLoopTreeMap implements IWrr {
+    final int total;
+    final AtomicInteger count = new AtomicInteger();
+    final TreeMap<Integer, Element> pool = new TreeMap<>();
+
+    public WrrSecurityLoopTreeMap(Element[] elements) {
+        int total = 0;
+        for (Element ele : elements) {
+            total += ele.weight;
+            pool.put(total - 1, ele);
+        }
+        this.total = total;
+    }
+
+    @Override
+    public String next() {
+        final int modulo = total;
+        for (; ; ) {
+            int hit = count.get();
+            int next = (hit + 1) % modulo;
+            if (count.compareAndSet(hit, next) && hit < modulo) {
+                return pool.ceilingEntry(hit).getValue().peer;
+            }
+        }
+    }
+}
+```
+## LVS版本
+上面的这些版本（除了随机），有一个最大的问题，就是调度不均衡。当我们的比例是7、2、1，它的调度结果是A,A,A,A,A,A,A,B,B,C,。  
+我们希望调度能够平滑一些，而不是一股脑的压在A节点上。采用最大公约数来实现轮询。虽然它不能实现非常平滑的轮询，但起码比上面的自增式代码强多了。  
+``` 
+public class WrrGcd implements IWrr {
+    final int gcd;
+    final int max;
+    final Element[] elements;
+
+    public WrrGcd(Element[] elements) {
+        Integer gcd = null;
+        int max = 0;
+        for (Element ele : elements) {
+            gcd = gcd == null ? ele.weight : gcd(gcd, ele.weight);
+            max = Math.max(max, ele.weight);
+        }
+        this.gcd = gcd;
+        this.max = max;
+        this.elements = elements;
+    }
+
+    int i = -1;
+    int cw = 0;
+    @Override
+    public String next() {
+        for (; ; ) {
+            final int n = elements.length;
+            i = (i + 1) % n;
+            if (i == 0) {
+                cw = cw - gcd;
+                if (cw <= 0) {
+                    cw = max;
+                    if (cw == 0) {
+                        return null;
+                    }
+                }
+            }
+            if(elements[i].weight >= cw){
+                return elements[i].peer;
+            }
+        }
+    }
+
+    private int gcd(int a, int b) {
+        return b == 0 ? a : gcd(b, a % b);
+    }
+}
+```
+在构造函数里，算出最大公约数的gcd。然后，基于这个最大公约数，进行轮询算法的运算。
+## Nginx版本
+nginx这个版本可以达到A,A,B,A,A,C,A,A,B,A,的效果。在保证准确的权重前提下，实现了调用尽量的分散。
+``` 
+public class WrrSmooth implements IWrr {
+    class Wrr {
+        Element ele;
+        int current = 0;
+        Wrr(Element ele){
+            this.ele = ele;
+        }
+    }
+
+    final Wrr[] cachedWeights;
+
+    public WrrSmooth(Element[] elements) {
+        this.cachedWeights = Arrays.stream(elements)
+                .map(Wrr::new)
+                .collect(Collectors.toList())
+                .toArray(new Wrr[0]);
+    }
+
+    @Override
+    public String next() {
+        int total = 0;
+        Wrr shed = cachedWeights[0];
+
+        for(Wrr item : cachedWeights){
+            int weight = item.ele.weight;
+            total +=  weight;
+
+            item.current += weight;
+            if(item.current > shed.current){
+                shed = item;
+            }
+        }
+        shed.current -= total;
+        return shed.ele.peer;
+    }
+}
+```
+封装了一个叫做Wrr的类。这个类在原来权重的基础上，增加了一个当前的权重值current。current没次调用都会改变。  
+在每一轮调用中，都会在current上加上对应节点的weight值，然后选择current值最大的那一个，当作本轮的调度节点。  
+被选中的节点，将会减去所有的权重值total，然后进行下一次调度。唯一的问题是，当节点比较多的时候，它的时间复杂度总是O(n)，执行效率上要打一些折扣。  
+
 参考:  
 [加权轮询算法(wrr)，这个考点，概率有点高！](https://juejin.cn/post/7044767564941459487)
